--- a/Hospital.ASP/Views/Account/Register.cshtml
+++ b/Hospital.ASP/Views/Account/Register.cshtml
@@ -135,7 +135,7 @@
 		</div>
 	</div>   
 
-	<div class="row m-0">    
+	<div class="row m-0 px-3">    
 		<a href="/Home/Index" class="btn btn-secondary col mr-4">Отмена</a>
 		<input type="submit" value="Отправить" class="btn btn-primary col ml-4"/>
 	</div>
