--- a/Hospital.ASP/Views/MedCard/Tests.cshtml
+++ b/Hospital.ASP/Views/MedCard/Tests.cshtml
@@ -7,8 +7,8 @@
 <div class="validation" asp-validation-summary="All"></div>
 
 <div class="d-flex flex-wrap" style="gap:10px;">
-    <div class="flex-fill">
-		<table class="table table-hover rounded shadow mb-0">
+    <div class="flex-fill table-responsive rounded shadow">
+		<table class="table table-hover mb-0">
 			<thead class="thead-dark">
 				<tr>
 					<th>#</th>
