--- a/Hospital.ASP/Views/Shared/_Layout.cshtml
+++ b/Hospital.ASP/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow"
             style="font-size: 1.0em !important">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span class="text-warning">One</span>Clinic</a>
+                <a class="navbar-brand text-nowrap" asp-area="" asp-controller="Home" asp-action="Index"><span class="text-warning">One</span>Clinic</a>
                 <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
             </div>
         </nav>
     </header>
-    <div class="container" style="padding-right: 0; padding-left: 0;">
+    <div class="container p-0 pb-2">
         <main role="main">
             @RenderBody()
         </main>
