--- a/Hospital.ASP/Views/Account/Edit.cshtml
+++ b/Hospital.ASP/Views/Account/Edit.cshtml
@@ -3,18 +3,7 @@
 	ViewData["Title"] = "Редактировать данные";
 	Layout = "_Navbar";
 
-	var marriedList = new SelectList(new[]
-				{
-					new SelectListItem { Value = bool.FalseString, Text = "Не состою", Selected = Model.IsMarried.Value},
-					new SelectListItem { Value = bool.TrueString, Text = "Состою", Selected = Model.IsMarried.Value },
-					new SelectListItem { Value = null, Text = "Не определился",  Selected = !Model.IsMarried.HasValue },
-				}, "Value", "Text");
-	var childList = new SelectList(new[]
-				{
-					new SelectListItem { Value = bool.FalseString, Text = "Не имеются", Selected = Model.IsMarried.Value},
-					new SelectListItem { Value = bool.TrueString, Text = "Имеются", Selected = Model.IsMarried.Value },
-					new SelectListItem { Value = null, Text = "Не определился",  Selected = !Model.IsMarried.HasValue },
-				}, "Value", "Text");
+	await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
 
 <div>
@@ -64,7 +53,7 @@
 					<label asp-for="Gender" class="col-sm-3 col-form-label py-0 pr-2">Пол</label>
 					<div class="col-sm-9">
 						<select class="custom-select" asp-for="Gender" asp-items="Html.GetEnumSelectList<Gender>()">
-							<option value="null">Не определился</option>
+							<option value="">Не определился</option>
 						</select>
 					</div>
 				</div>
@@ -72,14 +61,22 @@
 				<div class="form-group row align-items-center m-0 my-3">
 					<label asp-for="IsMarried" class="col-sm-3 col-form-label py-0 pr-2">Состоите в браке</label>
 					<div class="col-sm-9">
-						<select class="custom-select" asp-for="IsMarried" asp-items="@marriedList"></select>
+						<select class="custom-select"  asp-for="IsMarried">
+							<option value="">Не определился</option>
+							<option value="true">Состою</option>
+							<option value="false">Не состою</option>
+						</select>
 					</div>
 				</div>
 
 				<div class="form-group row align-items-center m-0 my-3">
 					<label asp-for="HasChild" class="col-sm-3 col-form-label py-0 pr-2">Наличие детей</label>
 					<div class="col-sm-9">
-						<select class="custom-select" asp-for="HasChild" asp-items="@childList"></select>
+						<select class="custom-select" asp-for="HasChild">
+							<option value="">Не определился</option>
+							<option value="true">Имеются</option>
+							<option value="false">Не имеются</option>
+						</select>
 					</div>
 				</div>
 
