--- a/Hospital.ASP/Views/Account/Security.cshtml
+++ b/Hospital.ASP/Views/Account/Security.cshtml
@@ -4,5 +4,42 @@
 }
 
 <div>
-	безопасность
+	<a>Смена пароля</a>
+
+
+	<form asp-action="ChangePassword" asp-antiforgery="true" asp-controller="Account">
+
+		<div class="validation" asp-validation-summary="ModelOnly"></div>
+
+		<div class="form-group row align-items-center m-0 my-3">
+			<label for="phoneNumber" class="col-sm-3 col-form-label py-0 pr-2">Номер телефона</label>
+			<div class="col-sm-9">
+				<input type="tel" name="phoneNumber" class="form-control" required placeholder="введите номер телефона">
+			</div>
+		</div>
+
+		<div class="form-group row align-items-center m-0 my-3">
+			<label for="oldPassword" class="col-sm-3 col-form-label py-0 pr-2">Пароль</label>
+			<div class="col-sm-9">
+				<input type="password" class="form-control" name="oldPassword" required placeholder="введите старый пароль">
+			</div>
+		</div>
+
+
+		<div class="form-group row align-items-center m-0 my-3">
+			<label for="newPassword" class="col-sm-3 col-form-label py-0 pr-2">Пароль</label>
+			<div class="col-sm-9">
+				<input type="password" class="form-control" name="newPassword" required placeholder="введите новый пароль">
+			</div>
+		</div>
+
+		<div class="form-group row align-items-center m-0 my-3">
+			<label for="confirmPassword" class="col-sm-3 col-form-label py-0 pr-2">Подтверждение пароля</label>
+			<div class="col-sm-9">
+				<input type="password" class="form-control" name="confirmPassword" required placeholder="подтвердите пароль">
+			</div>
+		</div>
+
+		<input type="submit" value="Отправить" class="btn btn-primary col ml-4"/>
+	</form>
 </div>
