--- a/Hospital.ASP/Views/Account/Security.cshtml
+++ b/Hospital.ASP/Views/Account/Security.cshtml
@@ -3,43 +3,61 @@
 	Layout = "_Navbar";
 }
 
-<div>
-	<a>Смена пароля</a>
+<style>
+	.form-group label
+	{
+		padding:0;
+		opacity:0.5;
+		font-weight:bold;
+		padding-left:0.5rem;
+		padding-right:0.5rem;
+	}	
+	.form-group div
+	{
+		padding:0;
+	}	
+</style>
+
+<div class="px-2">
 
 
 	<form asp-action="ChangePassword" asp-antiforgery="true" asp-controller="Account">
+		
+		<h6 class="p-2 m-0">Смена пароля</h6>
 
 		<div class="validation" asp-validation-summary="ModelOnly"></div>
 
 		<div class="form-group row align-items-center m-0 my-3">
-			<label for="phoneNumber" class="col-sm-3 col-form-label py-0 pr-2">Номер телефона</label>
-			<div class="col-sm-9">
+			<label for="phoneNumber" class="col-sm-4 col-form-label">Номер телефона</label>
+			<div class="col-sm-8">
 				<input type="tel" name="phoneNumber" class="form-control" required placeholder="введите номер телефона">
 			</div>
 		</div>
 
 		<div class="form-group row align-items-center m-0 my-3">
-			<label for="oldPassword" class="col-sm-3 col-form-label py-0 pr-2">Пароль</label>
-			<div class="col-sm-9">
+			<label for="oldPassword" class="col-sm-4 col-form-label">Старый пароль</label>
+			<div class="col-sm-8">
 				<input type="password" class="form-control" name="oldPassword" required placeholder="введите старый пароль">
 			</div>
 		</div>
 
 
 		<div class="form-group row align-items-center m-0 my-3">
-			<label for="newPassword" class="col-sm-3 col-form-label py-0 pr-2">Пароль</label>
-			<div class="col-sm-9">
+			<label for="newPassword" class="col-sm-4 col-form-label">Новый пароль</label>
+			<div class="col-sm-8">
 				<input type="password" class="form-control" name="newPassword" required placeholder="введите новый пароль">
 			</div>
 		</div>
 
 		<div class="form-group row align-items-center m-0 my-3">
-			<label for="confirmPassword" class="col-sm-3 col-form-label py-0 pr-2">Подтверждение пароля</label>
-			<div class="col-sm-9">
+			<label for="confirmPassword" class="col-sm-4 col-form-label">Подтверждение пароля</label>
+			<div class="col-sm-8">
 				<input type="password" class="form-control" name="confirmPassword" required placeholder="подтвердите пароль">
 			</div>
 		</div>
 
-		<input type="submit" value="Отправить" class="btn btn-primary col ml-4"/>
+		<hr />
+
+		<input type="submit" value="Сменить" class="btn btn-primary btn-block m-0"/>
 	</form>
 </div>
