--- a/Hospital.ASP/Views/Shared/_Layout.cshtml
+++ b/Hospital.ASP/Views/Shared/_Layout.cshtml
@@ -1,87 +1,93 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"]</title>
 
    @* 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
    *@
-     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/StyleSheet.css" />
+	 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/css/site.css" />
+	<link rel="stylesheet" href="~/css/StyleSheet.css" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow"
-            style="font-size: 1.0em !important">
-            <div class="container">
-                <a class="navbar-brand text-nowrap" asp-area="" asp-controller="Home" asp-action="Index"><span class="text-warning">One</span>Clinic</a>
-                <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse">
-                    <ul class="navbar-nav flex-grow-1 ">
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link @Html.ActiveClass("Account","Index","text-white")" asp-area="" asp-controller="Account" asp-action="Index">
-                                    АККАУНТ
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link " asp-area="" asp-controller="Appointment" asp-action="Index">
-                                    ЗАПИСЬ НА ПРИЕМ
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link @Html.ActiveClass("MedCard","Index","text-white")" asp-area="" asp-controller="MedCard" asp-action="Index">
-                                    МЕДИЦИНСКАЯ КАРТА
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">             
-                        @if (User.Identity.IsAuthenticated) {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">
-                                    <i class="bi bi-box-arrow-in-left"></i>
-                                    Выход
-                                </a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" asparea="" asp-controller="Account" asp-action="Login">
-                                    <i class="bi bi-box-arrow-in-right"></i>
-                                    Вход
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container p-0 pb-2">
-        <main role="main">
-            @RenderBody()
-        </main>
-    </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Hospital.ASP - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<body>
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow"
+			style="font-size: 1.0em !important">
+			<div class="container">
+				<a class="navbar-brand text-nowrap" asp-area="" asp-controller="Home" asp-action="Index"><span class="text-warning">One</span>Clinic</a>
+				<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+						aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-collapse collapse">
+					<ul class="navbar-nav flex-grow-1 ">
+						@if (User.Identity.IsAuthenticated)
+						{
+							<li class="nav-item">
+								<a class="nav-link @Html.ActiveClass("Account","Index","text-white")" asp-area="" asp-controller="Account" asp-action="Index">
+									АККАУНТ
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link " asp-area="" asp-controller="Appointment" asp-action="Index">
+									ЗАПИСЬ НА ПРИЕМ
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link @Html.ActiveClass("MedCard","Index","text-white")" asp-area="" asp-controller="MedCard" asp-action="Index">
+									МЕДИЦИНСКАЯ КАРТА
+								</a>
+							</li>
+						}
+					</ul>
+					<ul class="nav navbar-nav navbar-right">             
+						@if (User.Identity.IsAuthenticated) {
+							<li class="nav-item">
+								<a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">
+									<i class="bi bi-box-arrow-in-left"></i>
+									Выход
+								</a>
+							</li>
+						}
+						else
+						{
+							<li class="nav-item">
+								<a class="nav-link" asparea="" asp-controller="Account" asp-action="Login">
+									<i class="bi bi-box-arrow-in-right"></i>
+									Вход
+								</a>
+							</li>
+						}
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<div class="container p-0 pb-2">
+
+		<partial name="_CookieConsentPartial"/>
+		<partial name="_NotificationAreaPartial"/>
+
+		<main role="main">
+			@RenderBody()
+		</main>
+	</div>
+
+	<footer class="border-top footer text-muted">
+		<div class="container">
+			&copy; 2021 - Hospital.ASP - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+		</div>
+	</footer>
+
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
