--- a/Hospital.ASP/Views/_ViewImports.cshtml
+++ b/Hospital.ASP/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Hospital.Domain.Model
 @using Hospital.ViewModel
+@using Hospital.ViewModel.Notificator
 @using Hospital.ASP
 @using Hospital.ASP.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
