--- a/Hospital.ASP/Views/Appointment/Index.cshtml
+++ b/Hospital.ASP/Views/Appointment/Index.cshtml
@@ -21,9 +21,9 @@
 	}
 </style>
 
-<div class="m-3">
+<div class="my-2">
 	
-	<div class="table-responsive rounded shadow">
+	<div class="table-responsive rounded-response shadow">
 	
 		<p class="bg-primary text-white p-2">Параметры поиска</p>
 
@@ -50,11 +50,11 @@
 	</div>
 
 	<div>
-		<div class="my-3" id="doctorsPartial"/>
+		<div class="my-2" id="doctorsPartial"/>
 	</div>
 
 	<div>
-		<div class="my-3"  id="entriesPartial"/>
+		<div class="my-2"  id="entriesPartial"/>
 	</div>
 
 </div>
