--- a/Hospital.ASP/Views/Appointment/_DoctorsPartial.cshtml
+++ b/Hospital.ASP/Views/Appointment/_DoctorsPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Entry>
 
-<div class="table-responsive rounded shadow">
+<div class="table-responsive rounded-response shadow">
 	<table class="table table-hover m-0">
 		<thead class="thead-dark" >
 			<tr>
