--- a/Hospital.ASP/Views/MedCard/Entries.cshtml
+++ b/Hospital.ASP/Views/MedCard/Entries.cshtml
@@ -13,15 +13,14 @@
 	}
 	else
 	{
-		<div class="table-responsive rounded shadow">
+		<div class="table-responsive rounded-response shadow">
 			<table class="table mb-0">
 				<thead class="thead-dark">
 					<tr>
 						<th style="width: 5%">#</th>
 						<th style="width: 20%">Дата/Время</th>
-						<th style="width: 35%">Специалист</th>
-						<th style="width: 25%">Адрес</th>
-						<th style="width: 15%">Статус заявки</th>
+						<th style="width: 60%">Специалист</th>
+						<th style="width: 15%">Статус</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -34,12 +33,16 @@
 								<span class="text-muted">@entry.TargetDateTime.ToString("dd MMMM, ddd")</span>
 							</td>
 							<td>
-								<h6 class="p-0 m-0">@entry.DoctorDestination.GetShortName()</h6>
-								<span class="text-muted text-break">@entry.DoctorDestination.Department.Title.Title</span>
-							</td>
-							<td>
-								@entry.DoctorDestination.Department.Adress.ToShortString(), 
-								кабинет: @entry.DoctorDestination.Cabinet
+								<div class="row">
+									<div class="col-sm">
+										<h6 class="p-0 m-0">@entry.DoctorDestination.GetShortName()</h6>
+										<span class="text-muted text-break">@entry.DoctorDestination.Department.Title.Title</span>
+									</div>
+									<div class="col-sm">
+										@entry.DoctorDestination.Department.Adress.ToShortString(), 
+										кабинет: @entry.DoctorDestination.Cabinet
+									</div>
+								</div>
 							</td>
 							<td>
 								@entry.EntryStatus <br />
