--- a/Hospital.ASP/Views/MedCard/_Navbar.cshtml
+++ b/Hospital.ASP/Views/MedCard/_Navbar.cshtml
@@ -2,22 +2,22 @@
     Layout = "_Layout";
 }
 
-<nav class="breadcrumb p-0 my-2 rounded">
+<nav class="breadcrumb p-0 px-2 my-2 rounded-response">
     <ul class="nav"> 
             <li class="nav-item  p-0">
-                <a class="nav-link m-0 py-1 px-2
+                <a class="nav-link m-0 p-2
                          @Html.ActiveClass("MedCard","Index","text-dark font-weight-bold")" 
                     style="color: rgba(0,0,0,.5)"
                     asp-action="Index">Сводка</a>
             </li>   
             <li class="nav-item p-0">
-                <a class="nav-link m-0 py-1 px-2
+                <a class="nav-link m-0 p-2
                         @Html.ActiveClass("MedCard","Tests","text-dark font-weight-bold")"
                     style="color: rgba(0,0,0,.5)"
                     asp-action="Tests">Процедуры</a>
             </li>
             <li class="nav-item p-0">
-                <a class="nav-link m-0 py-1 px-2
+                <a class="nav-link m-0 p-2
                         @Html.ActiveClass("MedCard","Entries","text-dark font-weight-bold")"
                     style="color: rgba(0,0,0,.5)"
                     asp-action="Entries">Записи</a>
