--- a/Hospital.ASP/Views/_ViewImports.cshtml
+++ b/Hospital.ASP/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Hospital.Domain.Model
-@using Hospital.ViewModel
-@using Hospital.ViewModel.Notificator
 @using Hospital.ASP
 @using Hospital.ASP.Extensions
+@using Hospital.ASP.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
