--- a/Hospital.ASP/wwwroot/css/StyleSheet.css
+++ b/Hospital.ASP/wwwroot/css/StyleSheet.css
@@ -27,21 +27,21 @@
         box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.2);
     }
 
-    .custom-select {
-        background-color: #f5f5f5;
-        border: 0;
-        border-bottom: 2px solid #ced4da;
-        border-radius: 0;
-        border-top-left-radius: 0.25rem;
-        border-top-right-radius: 0.25rem;
-    }
+.custom-select {
+    background-color: #f5f5f5;
+    border: 0;
+    border-bottom: 2px solid #ced4da;
+    border-radius: 0;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+}
 
-    .custom-select:focus {
-        border-color: #80bdff;
-        background-color: #f8f8f8;
-        outline: 0;
-        box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.2);
-    }
+.custom-select:focus {
+    border-color: #80bdff;
+    background-color: #f8f8f8;
+    outline: 0;
+    box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.2);
+}
 
 .inner-addon {
     position: relative;
@@ -130,15 +130,7 @@ input[type="checkbox"].input-validation-error {
 }
 
 @media (max-width:576px){
-    .card {
-        border-radius: 0 !important;
-    }
-
-    .card-header {
-        border-radius: 0 !important;
-    }
-
-    .card-footer {
+    .card .card-header .card-footer {
         border-radius: 0 !important;
     }
 
