--- a/Hospital.ASP/Views/Appointment/_ConfirmPartial.cshtml
+++ b/Hospital.ASP/Views/Appointment/_ConfirmPartial.cshtml
@@ -15,6 +15,6 @@
 	</div>
 	<hr/>
 	<div>
-		посмотреть активные записи вы можете здесь
+		посмотреть активные записи вы можете <a href="/MedCard/Entries">здесь</a>
 	</div>
 </div>
