--- a/Hospital.ASP/Views/Home/About.cshtml
+++ b/Hospital.ASP/Views/Home/About.cshtml
@@ -4,12 +4,13 @@
 		О проекте
 	</h1>
 	<p class="lead">
-		Изначально задуман как pet-проект c открытим исходным кодом.
+		Изначально задуман как pet-проект МИС c открытым исходным кодом.
+		В качестве бесплатной альтернативы с легким интерфейсом и минимумом ненужных функций, ядро которого вы можете модифицировать и дорабатывать под свои нужды.
 	</p>
 	<hr />
 	<p class="lead">Среди главных идей:</p>
 
-	<dl class="dl-horizontal row">
+	<dl class="dl-horizontal m-0 row">
 	  <dt class="col-sm-4">Кроссплатформенность и автономность</dt>
 	  <dd class="col-sm-8">Что подразумевает толстый клиент, способный работать оффлайн с возможностью синхронизации,
 							как инструмент для выезда на дом и в труднодоступные места</dd>
@@ -27,8 +28,8 @@
 	</dl>
 
 	<hr />
-	<div class="row">
-		<div class="col-md">
+	<div class="row m-0">
+		<div class="col-md p-0">
 			<p class="lead">Запланированные модули:</p>
 			<ul>
 				<li>Амбулаторный прием</li>
@@ -39,7 +40,7 @@
 				<li>Администрирование</li>
 			</ul>
 		</div>
-		<div class="col-md">
+		<div class="col-md p-0">
 			<p class="lead">А так же:</p>
 			<ul>
 				<li>Единая система реестров учета</li>
