--- a/Hospital.ASP/Views/Home/Index.cshtml
+++ b/Hospital.ASP/Views/Home/Index.cshtml
@@ -69,6 +69,6 @@
 		<hr class="my-2">
 		<p>В целях демонстрации возможностей работа разрешена только зарегистрированным пользователям. Вы можете использовать демо-аккаунт, или создать свой.</p>
 		<p class="lead">
-			<a class="btn btn-primary" href="#!" role="button">Подробнее</a>
+			<a class="btn btn-primary" asp-action="Tutorial" role="button">Подробнее</a>
 		</p>	
 </div>
