--- a/Hospital.ASP/Views/Account/Register.cshtml
+++ b/Hospital.ASP/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
 <form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
 
-	<div class="card shadow rounded border-0 mb-3 mt-3">
+	<div class="card shadow border-0 mb-3 mt-3">
 		<div class="card-header text-center text-white bg-primary">Служебная информация</div>
 		<div class="card-body p-0">
 
