--- a/Hospital.ASP/wwwroot/css/StyleSheet.css
+++ b/Hospital.ASP/wwwroot/css/StyleSheet.css
@@ -130,7 +130,19 @@ input[type="checkbox"].input-validation-error {
 }
 
 @media (max-width:576px){
-    .card .card-header .card-footer {
+    .card {
+        border-radius: 0 !important;
+    }
+
+    .card-body {
+        border-radius: 0 !important;
+    }
+
+    .card-header {
+        border-radius: 0 !important;
+    }
+
+    .card-footer {
         border-radius: 0 !important;
     }
 
