Migration to net 6. DateOnly model, Npgsql 6 timestamp migration

--- a/Hospital.ASP/Views/Account/_Navbar.cshtml
+++ b/Hospital.ASP/Views/Account/_Navbar.cshtml
@@ -9,7 +9,7 @@
             <ul class="nav col-response"> 
                     <li class="nav-item p-0">
                         <a class="nav-link  m-0 py-2 px-3
-                                 @Html.ActiveClass("Account","Index","text-dark font-weight-bold")" 
+                                 @Html.ActiveClass("Account","Index,Edit","text-dark font-weight-bold")" 
                             style="color: rgba(0,0,0,.5)"
                             asp-action="Index">Личные данные</a>
                     </li>   
