--- a/Hospital.ASP/Views/Home/Tutorial.cshtml
+++ b/Hospital.ASP/Views/Home/Tutorial.cshtml
@@ -1,7 +1,51 @@
 ﻿@{
-	ViewData["Title"] = "Инструкция";
+	ViewData["Title"] = "Краткое руководство";
 }
 
 <div>
-	инструкция
+	<div class="p-3">
+		<h5 class="border-bottom pb-2">Web-портал</h5>
+		<div class="row m-0">
+			<div class="col-md p-0">
+				<h6 class="text-muted">Запись на прием:</h6>
+				<ul>
+					<li>Авторизируйтесь
+						<footer class="blockquote-footer">можете использовать демо-аккаунт</footer>
+					</li>
+					<li>Выберите тип отделения</li>
+					<li>Выберите дату
+						<footer class="blockquote-footer">расписание сформировано на лето 2021, для каждого сотрудника случайно</footer>
+						<footer class="blockquote-footer">можете воспользоваться флагом первой доступной записи</footer>
+					</li>
+					<li>Проведите поиск по заданным параметрам</li>
+					<li>Выберите подходящего врача</li>
+					<li>Выберите и подтвердите подходящую запись</li>
+				</ul>
+			</div>
+			<div class="col-md p-0">
+				<h6 class="text-muted">Отмена записи:</h6>
+				<ul>
+					<li>Авторизируйтесь</li>
+					<li>Войдите в раздел "Медицинская карта" - "Записи"</li>
+					<li>Напротив нужной записи выберите "Отменить"
+						<footer class="blockquote-footer">отменить возможно только первичные записи, ожидающие приема</footer>
+					</li>
+					<li>Подтвердите отмену</li>
+				</ul>
+			</div>
+		</div>
+		<h6 class="text-muted">Просмотр процедур и анализов:</h6>
+		<ul>
+			<li>Авторизируйтесь</li>
+			<li>Войдите в раздел "Медицинская карта" - "Процедуры"
+				<footer class="blockquote-footer">регистрация процедур производиться в программном модуле</footer>
+				<footer class="blockquote-footer">можете использовать демо-аккаунт для просмотра примеров</footer>
+			</li>
+			<li>Выберите подходящее поле для просмотра подробностей</li>
+		</ul>
+
+		<h5 class="border-bottom py-2">Приложение сотрудника: Модуль регистратуры</h5>
+		<h6 class="text-muted font-italic">В разработке...</h6>
+	</div>
+
 </div>
