--- a/Hospital.ASP/Views/MedCard/Tests.cshtml
+++ b/Hospital.ASP/Views/MedCard/Tests.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TestData>;
 @{
-	ViewData["Title"] = "Тестирования и процедуры";
+	ViewData["Title"] = "Тесты и процедуры";
 	Layout = "_Navbar";
 }
 
