--- a/Hospital.WPF/Views/Login.xaml
+++ b/Hospital.WPF/Views/Login.xaml
@@ -39,6 +39,7 @@
                 <ComboBoxItem Content="89411654359"/>
                 <ComboBoxItem Content="89400515275"/>
                 <ComboBoxItem Content="89718180221"/>
+                <ComboBoxItem Content="89571906783"/>
             </ComboBox>
             <Grid Height="35">
                 <Grid.ColumnDefinitions>
