--- a/Hospital.WPF/Controls/Registrator/RegEditPanel.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegEditPanel.xaml
@@ -107,7 +107,7 @@
                 <TextBlock Text="Дата рождения" Grid.Row="0" Grid.Column="0"/>
                 <DatePicker Grid.Row="1" Grid.Column="0" Margin="0,0,5,5">
                     <DatePicker.SelectedDate>
-                        <Binding Path="EditingPatient.BirthDay">
+                        <Binding Path="BirthDateTime">
                             <Binding.ValidationRules>
                                 <val:BirthDateRule/>
                             </Binding.ValidationRules>
