Rollback npgsql datetime to legacy behaviour

--- a/Hospital.ASP/Views/Account/Login.cshtml
+++ b/Hospital.ASP/Views/Account/Login.cshtml
@@ -91,7 +91,7 @@
 					$("#demoPartial").html(result);
 				},
 				error: function (XMLHttpRequest, textStatus, errorThrown) {
-					alert(errorThrown);
+					alert(textStatus);
 				}
 			});
 		}
