--- a/Hospital.ASP/Views/Appointment/Index.cshtml
+++ b/Hospital.ASP/Views/Appointment/Index.cshtml
@@ -90,7 +90,7 @@
 				$("#doctorsPartial").html(result);
 			},
 			error: function (XMLHttpRequest, textStatus, errorThrown) {
-				alert(errorThrown);
+				alert(textStatus + " " + errorThrown);
 			}
 		});
 	}
